--- a/usecase5.html
+++ b/usecase5.html
@@ -10,6 +10,7 @@
 
     <p id="demo"></p>
 
+    <!-- Proram solved using IF and SWITCH statements -->
     <script>
         function findVowels(string) {
             let count = 0;
